--- a/app/css/layout.css
+++ b/app/css/layout.css
@@ -1,3 +1,18 @@
+.section-inner {
+  width: 1160px;
+  margin: 0 auto;
+}
+
+.site-header {
+  background-color: #333;
+  text-align: center;
+}
+
+.site-footer {
+  background-color: #ddd;
+  min-height: 200px;
+}
+
 body.no-game {
 
 }
@@ -27,5 +42,5 @@ body.computer-turn {
 }
 
 body.thinking {
-  
+
 }
